avoid editor overflow

--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -9,9 +9,11 @@
   flex:1;
 }
 .editor__head{
+  /* TextNodeEdit depends on this height */
+  height: 68px;
   border-bottom: 1px solid #dbdce0;
+
   padding: 0 5px;
-  min-height: 68px;
 }
 .editor__body{
   flex:1;
@@ -228,7 +230,8 @@
   box-shadow: 0 0 13px rgba(0, 0, 0, 0.2);
   border:4px solid #65a8f0;
   border-radius: 5px;
-  
+  max-height: 100vh;
+  overflow-y: scroll;
 }
 
 .text-node-edit__line{
